# fastapi-admin-cli

./: .gitattributes  .gitignore  CONTRIBUTING.md  DISCUSSIONS.md  LICENSE  README.md  pyproject.toml  record_demo.sh  test_commands.sh
.github/workflows/: publish-to-pypi.yml
assets/: __init__.py
fastapi_admin/: cli.py
fastapi_admin/commands/: app.py  container.py  docker.py  migrations.py  project.py  server.py
fastapi_admin/utils/: template_utils.py
